[gd_scene load_steps=3 format=3 uid="uid://cmvnh5wepvkj7"]

[ext_resource type="Script" path="res://control.gd" id="1_3xaxf"]
[ext_resource type="Script" path="res://Server.gd" id="2_hfvrh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3xaxf")

[node name="Server" type="Node" parent="."]
script = ExtResource("2_hfvrh")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="StartServer" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "StartServer"

[node name="SendTestPacket" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send Test Packet"

[node name="ServerStatus" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Server Status: offline
"

[node name="ClientStatus" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Client Status: desconectado id: "

[node name="Effects" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="button_down" from="ScrollContainer/VBoxContainer/HBoxContainer/StartServer" to="Server" method="_on_start_server_button_down"]
